# sigil

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  codecov.yml  dev.sh  release-please-config.json  rust-toolchain.toml  skills-lock.json
.agents/skills/mcp-ops/: SKILL.md
.claude/agents/: a11y.md  architect.md  be.md  compliance.md  data-scientist.md  devops.md  fe.md  governance.md  security.md  ux.md
.claude/commands/: implement.md  review.md
.claude/rules/: a11y-rules.md  ci-shell-discipline.md  frontend-defensive.md  rust-defensive.md
.claude/skills/: mcp-ops
.config/: nextest.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  deploy.yml  release-please.yml  release.yml  tauri-build.yml
.github/workflows/scripts/: delete-node-removal-discipline.env  test-delete-node-removal-discipline.sh
.playwright-mcp/: page-2026-04-02T16-27-16-174Z.yml
bindings/css/: package.json  tsconfig.json
bindings/css/src/: index.ts
bindings/tailwind/: package.json
bindings/tailwind/src/: index.ts
cli/: Cargo.toml
cli/src/: main.rs  migrate.rs
cli/tests/: integration_migrate.rs
crates/core/: Cargo.toml
crates/core/src/: arena.rs  boolean.rs  color_matrix.rs  command.rs  component.rs  corners_input.rs  document.rs  error.rs  id.rs  lib.rs  migrations.rs  node.rs  path.rs  prototype.rs  serialize.rs  token.rs  tree.rs  validate.rs  wire.rs
crates/core/src/commands/: batch_commands.rs  component_commands.rs  group_commands.rs  mod.rs  node_commands.rs  page_commands.rs  style_commands.rs  text_style_commands.rs  token_commands.rs  transition_commands.rs  tree_commands.rs
crates/core/src/tokens/: color_convert.rs  errors.rs  evaluator.rs  expression.rs  mod.rs  parser.rs
crates/core/src/tokens/functions/: blend.rs  color.rs  helpers.rs  math.rs  mod.rs  size.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: error.rs  http.rs  lib.rs  resources.rs  server.rs  session_resolver.rs  types.rs
crates/mcp/src/tools/: broadcast.rs  components.rs  document.rs  history.rs  mod.rs  nodes.rs  pages.rs  sessions.rs  text.rs  tokens.rs
crates/mcp/tests/: integration_set_corners.rs
crates/server/: Cargo.toml
crates/server/src/: dispatch.rs  heartbeat.rs  lib.rs  main.rs  persistence.rs  session_header.rs  session_persistence.rs  state.rs  test_support.rs  workfile.rs
crates/server/src/graphql/: mod.rs  mutation.rs  query.rs  session.rs  subscription.rs  types.rs
crates/server/src/routes/: document.rs  health.rs  mod.rs  ws.rs
crates/server/tests/: api_test.rs  integration_set_field_kind_broadcast.rs  integration_v1_workfile_migration.rs  parity_delete_nodes.rs  sessions_integration.rs
crates/state/: Cargo.toml
crates/state/src/: lib.rs  sessions.rs
docs/: RELEASE.md  competitive-analysis.md
docs/architecture/: adr-001-deployment-and-mcp.md  adr-002-plugin-system.md
docs/superpowers/: roadmap.md
docs/superpowers/plans/: 2026-04-01-00-toolchain-setup.md  2026-04-01-01a-core-foundation.md  2026-04-02-01b-command-system.md  2026-04-02-01c-independent-types.md  2026-04-02-01d-token-model.md  2026-04-02-01e-component-model.md  2026-04-02-01f-advanced-commands.md  2026-04-02-01g-wire-formats-boolean-ops.md  2026-04-02-02a-server-scaffold.md  2026-04-02-02b-file-io.md  2026-04-02-02d-graphql-server.md  2026-04-02-02e-frontend-graphql.md  2026-04-02-04a-frontend-foundation.md  2026-04-02-04b-tools-and-interactions.md  2026-04-02-07a-component-library-scaffold.md  2026-04-02-07b-component-inputs.md  2026-04-02-07c-component-overlays.md  2026-04-03-03a-mcp-server.md  2026-04-03-08a-solid-shell-migration.md  2026-04-03-08b-panel-system.md  2026-04-03-10a-dnd-infrastructure.md  2026-04-03-10b-layers-panel.md  2026-04-05-09a-backend-style-mutations.md  2026-04-05-09b-color-picker.md  2026-04-05-09c-panel-ui.md  2026-04-06-11a-a-backend-foundation.md  2026-04-06-11a-b-resize-and-snap.md  2026-04-06-11a-c-multi-select-align-group.md  2026-04-07-15a-operation-types-history-manager.md  2026-04-07-15b-operation-broadcast.md  2026-04-07-15c-frontend-mutations-refactor.md  2026-04-07-15d-server-simplification.md  2026-04-08-15e-transparent-undo-tracking.md  2026-04-09-03b-mcp-text-tools.md  2026-04-09-10c-pages-panel.md  2026-04-09-11b-text-tool.md  2026-04-10-09d-gradient-editing.md  2026-04-10-12-i18n.md  2026-04-13-09e-gradient-editor-redesign.md  2026-04-13-13a-token-store.md  (+17 more)
docs/superpowers/reviews/: 2026-04-02-advanced-commands.md  2026-04-02-command-system.md  2026-04-02-component-model.md  2026-04-02-file-io.md  2026-04-02-frontend-foundation.md  2026-04-02-frontend-graphql.md  2026-04-02-graphql-server.md  2026-04-02-independent-types.md  2026-04-02-server-scaffold.md  2026-04-02-token-model.md  2026-04-02-tools-and-interactions.md  2026-04-02-wire-formats-boolean-ops.md  2026-04-03-component-library.md  2026-04-03-pr22-mcp-server.md  2026-04-03-pr23-solid-shell.md  2026-04-03-pr24-panel-system.md  2026-04-03-pr25-dnd-infra.md  2026-04-05-pr26-layers-panel.md  2026-04-05-pr29-color-picker.md  2026-04-05-pr30-panel-ui.md  2026-04-06-pr30-panel-ui-review2.md  2026-04-06-pr33-viewport-backend.md  2026-04-06-pr34-resize-snap.md  2026-04-06-pr35-multi-select.md  2026-04-07-pr36-undo-operations.md  2026-04-07-pr37-undo-broadcast.md  2026-04-07-pr38-undo-mutations.md  2026-04-08-pr39-server-simplification.md  2026-04-08-pr39-v2-transparent-undo.md  (+27 more)
frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.setup.ts
frontend/.storybook/: main.ts  preview.ts
frontend/scripts/: check-locale-parity.mjs  check-locale-usage.mjs  generate-p3-parity.mjs
frontend/src/: App.css  App.tsx  main.ts  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: PLACEHOLDER.md  sigil-app.icns
src-tauri/src/: app_state.rs  dialogs.rs  file_assoc.rs  graphql_client.rs  lib.rs  lockfile.rs  main.rs  menus.rs  recent_files.rs  sessions_persist.rs  sidecar.rs  supervision.rs  windows.rs
(+427 files in other folders)
