[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/state",
    "crates/server",
    "crates/mcp",
    "cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "BUSL-1.1"
repository = "https://github.com/Evanion/sigil"

[workspace.dependencies]
# Core
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.23.0", features = ["v4", "serde"] }

# Async runtime
tokio = { version = "1.50.0", features = ["full"] }

# Web framework
axum = { version = "0.8.8", features = ["ws"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["fs", "cors"] }

# MCP
rmcp = { version = "1.3.0", features = ["server", "transport-io"] }
schemars = "1.0"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# GraphQL
async-graphql = "7.2"
async-graphql-axum = "7.2"
async-stream = "0.3"

# Streaming
futures-util = "0.3"

# Testing
assert_matches = "1"
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
tokio-tungstenite = "0.26"
