[package]
name = "sigil-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
sigil-core = { path = "../core" }
sigil-state = { path = "../state" }
axum = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
