[package]
name = "agent-designer-server"
version.workspace = true
edition.workspace = true

[dependencies]
agent-designer-core = { path = "../core" }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
