[package]
name = "agent-designer-server"
version.workspace = true
edition.workspace = true

[dependencies]
agent-designer-core = { path = "../core" }
agent-designer-state = { path = "../state" }
agent-designer-mcp = { path = "../mcp" }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
futures-util = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
async-stream = { workspace = true }


[dev-dependencies]
assert_matches = { workspace = true }
reqwest = { workspace = true }
tempfile = { workspace = true }
